# tech-radar-admin

./: .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
fixtures/: auth.User.yaml  radars.Radar.yaml  radars.Segement.yaml  radars.Segment.yaml
techradar/: asgi.py  settings.py  urls.py  wsgi.py
techradar/radars/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
techradar/radars/migrations/: 0001_initial.py  0002_alter_radar_slug.py  0002_segment_technology.py  0003_radar_color.py
techradar/radars/tests/: test_models.py  test_views.py
